Leitura de um txt e validando os cpfs.

--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run a one-line script
-      run: python main.py
+      run: python3 main.py
